# gcode

./: CHANGELOG.md  CLAUDE.md  LICENSE  flake.nix  gcode.cabal
.github/workflows/: ci.yml
exe/: Main.hs
src/: Utils.hs
src/GCode/: Build.hs  Checksum.hs  Parse.hs  Render.hs  Types.hs  Validate.hs
src/GCode/Types/: Block.hs  Command.hs  Parameter.hs  Program.hs  Units.hs
test/: BuildSpec.hs  ChecksumSpec.hs  CommandSpec.hs  ParseSpec.hs  PortedParseSpec.hs  PortedRenderSpec.hs  RenderSpec.hs  RoundTripSpec.hs  SmokeSpec.hs  TestMain.hs  ValidateSpec.hs
test-data/: arcs.gcode  simple.gcode
